version 0.9.7.1 - fixed comment text wrapping

--- a/client/src/app/features/util-feature/ticketing-feature/components/ticker-overview/ticker-overview.component.scss
+++ b/client/src/app/features/util-feature/ticketing-feature/components/ticker-overview/ticker-overview.component.scss
@@ -25,6 +25,11 @@
 		}
 	}
 
+	.c-comment {
+		padding: 16px;
+		word-break: break-word;
+	}
+
 	.c-action-buttons {
 		display: flex;
 		justify-content: flex-end;
